First commited as before_68004_rev2